--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h6 style="text-align: left; font-size: x-large;">About</h6>
             <p style="font-size: small; letter-spacing: .2; text-align: justify;">
                 I am an undergraduate student from Singapore Management University, currently pursuing a degree in Information Systems with double majors in Business Analytics
-                and Artificial Intelligence. <span class="weight">Python programming</span>, alongside <span class="weight">MySQl</span> are two of my strongest areas coupled with web development skills such as <span class="weight">PHP</span> and <span class="weight">Javascript</span>. 
+                and Artificial Intelligence. <span class="weight">Python programming</span>, alongside <span class="weight">MySQL</span> are two of my strongest areas coupled with web development skills such as <span class="weight">PHP</span> and <span class="weight">Javascript</span>. 
                 As an Information Systems undergraduate, I also have the understanding of <span class="weight">IT business modelling</span>. Additionally, I am proficient in <span class="weight">Indonesian</span> as well as <span class="weight">English</span> language. 
                 I am currently looking forward to apply the skills I have learned in univeristy in a working environment.
                 <!-- Hello There! The name's Hafil and am currently pursuing an information systems degree at Singapore Management University with double majors in Artificial Intelligence and Business Analytics. -->
