--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="name title text-center cotainer">
             <!--Name, Uni, Major, Contacts, Skill-->
             <h2>Hafil Noer Zachiary</h2>
+            <h4>Data Science and Artificial Intelligence Enthusiast</h4>
             <h5>Singapore Management University, School of Information Systems</h5>
             <ul class="contacts">
                 <li><a href="https://www.linkedin.com/in/hafilnz/">https://www.linkedin.com/in/hafilnz/</a></li>
@@ -22,7 +23,7 @@
             <p style="font-size: small; letter-spacing: .2; text-align: justify;">
                 I am an undergraduate student from Singapore Management University, currently pursuing a degree in Information Systems with double majors in Business Analytics
                 and Artificial Intelligence. <span class="weight">Python programming</span>, alongside <span class="weight">MySQL</span> are two of my strongest areas coupled with web development skills such as <span class="weight">PHP</span> and <span class="weight">Javascript</span>. 
-                As an Information Systems undergraduate, I also have the understanding of <span class="weight">IT business modelling</span>. Additionally, I am proficient in <span class="weight">Indonesian</span> as well as <span class="weight">English</span> language. 
+                Additionally, I am proficient in <span class="weight">Indonesian</span> as well as <span class="weight">English</span>. 
                 I am currently looking forward to apply the skills I have learned in univeristy in a working environment.
                 <!-- Hello There! The name's Hafil and am currently pursuing an information systems degree at Singapore Management University with double majors in Artificial Intelligence and Business Analytics. -->
             </p>
@@ -59,7 +60,7 @@
             <div style="text-align:left">
                 <div class="row">
                     <div class="col-md-9">
-                        <p style="font-size:large">SMUAI</p> 
+                        <p style="font-size:large">SMUAI - Programme Lead</p> 
                         <p style="font-size:small">Programme Lead</p>
                         <p style="font-size:small; text-align:justify">
                             Collaborated with fellow executive committee members to organize events and conduct researches for the purpose of creating articles to develop thought leadership on AI in the community.
@@ -130,7 +131,7 @@
                         <p style="font-size:large">Gold Prize Award in Theater Open Category Robotic Competition</p> 
                         <p style="font-size:small">Issued by Robotic Organizing Committee Indonesia</p>
                         <p style="font-size:small; text-align:justify">
-                            In a team of three, we successfully performed a short theatrical drama using only robots as our performers along with the use of props necessary for a drama performance.
+                            In a team of three, we successfully performed a short theatrical drama that told a short story of a village in peril.
                         </p>
                     </div>
                     <div class="col-md-3">
@@ -143,8 +144,8 @@
                         <p style="font-size:large">Technical Award in Creative Category Competition (Challenge-Level)</p> 
                         <p style="font-size:small">Issued by International Robotic Olympiad Committee</p>
                         <p style="font-size:small; text-align:justify">
-                            Along with my friend, we designed a simulation using the concepts of robotics in order to assist people in the event of a natural disaster. 
-                            Our simulation aimed to prevent forest fires through the use of sensors and robots.
+                            In a team of two, we designed a simulation that was aimed to assist people in the event of a natural disaster. 
+                            In this competition, we tackled the problem of forest fire and we tried to prevent it by alerting the nearest fire station of potential forest fire.
                         </p>
                     </div>
                     <div class="col-md-3">
