Added Ellipsis CA and hyperlink

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <div class="col-sm-3 raleway" style="font-size: .8rem; margin-top: 6px; text-align: right;">
                         <ul style="list-style-type: none;">
                             <li>
-                                github.com/Rdice14
+                                <a href="https://github.com/Rdice14" style="text-decoration: none; color:white;">github.com/Rdice14</a>
                             </li>
                             <li>
-                                linkedin.com/in/hafilnz
+                                <a href="https://linkedin.com/in/hafilnz" style="text-decoration: none; color:white;">linkedin.com/in/hafilnz</a>
                             </li>
                             <li>
                                 hnzachiary.2019@smu.edu.sg
@@ -57,7 +57,7 @@
                         <p style="font-size:small">Bachelor of Science (Information Systems) <br/> cGPA: 3.41/4.00</p>
                     </div>
                     <div class="col-sm-3">
-                        <p style="font-size: large; text-align-last: right"> 2019 -<br/> <span style="font-size: small;">Present</span></p>
+                        <p style="font-size: large; text-align-last: right"> Jul 2019 -<br/> <span style="font-size: small;">Present</span></p>
                     </div>
                 </div>
                 <div class="row">
@@ -66,7 +66,7 @@
                         <p style="font-size:small">Highschool Diploma (Material Science) <br/> National Examination: 36.75/40.00</p> 
                     </div>
                     <div class="col-sm-3">
-                        <p style="font-size: large; text-align-last: right"> 2016 -<br/> 2019</p>
+                        <p style="font-size: large; text-align-last: right"> Jul 2016 -<br/> May 2019</p>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,18 @@
                         </p>
                     </div>
                     <div class="col-md-3">
-                        <p style="font-size: large; text-align-last: right"> 2020 -<br/> <span style="font-size: small;">Present</span></p>
+                        <p style="font-size: large; text-align-last: right"> May 2020 -<br/> <span style="font-size: small;">Present</span></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-9">
+                        <p style="font-size:large">Ellipsis Coder's Assembly - Mentor</p> 
+                        <p style="font-size:small; text-align:justify">
+                            In a group of 3 coordinated by the organizing committee, provided mentoring sessions for School of Information Systems freshmen that aim to assist them in their Python programming courses.
+                        </p>
+                    </div>
+                    <div class="col-md-3">
+                        <p style="font-size: large; text-align-last: right"> Sep 2020 -<br/> <span style="font-size: small;">Present</span></p>
                     </div>
                 </div>
                 <div class="row">
@@ -96,7 +107,7 @@
                         </p>
                     </div>
                     <div class="col-md-3">
-                        <p style="font-size: large; text-align-last: right;"> 2019 -<br/> 2020</p>
+                        <p style="font-size: large; text-align-last: right;"> Sep 2019 -<br/> May 2020</p>
                     </div>
                 </div>
                 <div class="row">
@@ -108,7 +119,7 @@
                         </p>
                     </div>
                     <div class="col-md-3">
-                        <p style="font-size: large; text-align-last: right;"> 2019 -<br/> 2020</p>
+                        <p style="font-size: large; text-align-last: right;"> Oct 2019 -<br/> Mar 2020</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +137,7 @@
                         </p>
                     </div>
                     <div class="col-md-3">
-                        <p style="font-size: large; text-align-last: right"> 2017 </p>
+                        <p style="font-size: large; text-align-last: right"> Oct 2017 </p>
                     </div>
                 </div>
                 <div class="row">
@@ -139,7 +150,7 @@
                         </p>
                     </div>
                     <div class="col-md-3">
-                        <p style="font-size: large; text-align-last: right"> 2016 </p>
+                        <p style="font-size: large; text-align-last: right"> Dec 2016 </p>
                     </div>
                 </div>
             </div>
@@ -157,7 +168,7 @@
                         </p>
                     </div>
                     <div class="col-md-3">
-                        <p style="font-size: large; text-align-last: right"> 2019 -<br/> 2020</p>
+                        <p style="font-size: large; text-align-last: right"> Aug 2019 -<br/> Mar 2020</p>
                     </div>
                 </div>
                 <br/>
