Readjustment on hyperlink

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <div class="col-sm-3 raleway" style="font-size: .8rem; margin-top: 6px; text-align: right;">
                         <ul style="list-style-type: none;">
                             <li>
-                                <a href="https://github.com/Rdice14" style="text-decoration: none; color:white;">github.com/Rdice14</a>
+                                <a href="https://github.com/Rdice14" style="text-decoration: none;">github.com/Rdice14</a>
                             </li>
                             <li>
-                                <a href="https://linkedin.com/in/hafilnz" style="text-decoration: none; color:white;">linkedin.com/in/hafilnz</a>
+                                <a href="https://linkedin.com/in/hafilnz" style="text-decoration: none;">linkedin.com/in/hafilnz</a>
                             </li>
                             <li>
                                 hnzachiary.2019@smu.edu.sg
